--- a/style.css
+++ b/style.css
@@ -34,12 +34,15 @@ main {
     width: max(40%, 768px);
     margin: auto;
     background-color: var(--main-bg-color);
-    
+}
+
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     border-radius: var(--border-radius-large);
     padding: 50px;
     min-width: 320px;
@@ -116,6 +119,11 @@ input[type=number] {
     color: var(--main-bg-color);
 }
 
+#tip-button-container>button.active {
+    color: var(--main-accent-color);
+    background-color: var(--main-lighter-accent-color);
+}
+
 #tip-output {
     display: flex;
     flex-direction: column;
@@ -159,12 +167,18 @@ button {
 
 
 @media (max-width: 600px) {
+
     .container {
-        grid-template-columns: 1fr;
         width: 100vw;
-        height: 100vh;
-        padding: 30px;
+        padding: 30px 15px 30px 15px;
     }
+
+    form {
+        grid-template-columns: 1fr;
+        width: 100%;
+        min-height: 100vh;
+    }
+
     #tip-inputs {
         margin-right: 0;
     }
