--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ input[type=number] {
     color: var(--main-accent-color);
     background-color: var(--input-background-color);
     border-radius: var(--border-radius-small);
-    border: none;
+    border: solid 1px var(--input-background-color) ;
     padding: 6px;
 }
 
@@ -117,6 +117,34 @@ input[type=number] {
     border-radius: var(--border-radius-small);
     background-color: var(--main-accent-color);
     color: var(--main-bg-color);
+    min-width: 110px;
+}
+
+#custom-tip-button {
+    padding: 0 !important;
+    margin: 0;
+}
+
+#custom-tip-input {
+    padding: 0 0 0 5px ;
+    height: 100%;
+    width: 100%;
+    color: var(--main-accent-color);
+    border-radius: var(--border-radius-small);
+    background-color: var(--input-background-color);
+    border: none;
+    font-size: xx-large;
+    text-align: center;
+}
+
+#custom-tip-input:focus {
+    outline: none !important;
+    border: 1px solid var(--main-lighter-accent-color);
+}
+
+input:focus {
+    outline: none !important;
+    border: 1px solid var(--main-lighter-accent-color);
 }
 
 #tip-button-container>button.active {
@@ -164,6 +192,8 @@ p.per-person {
 button {
     border: none;
 }
+
+
 
 
 @media (max-width: 600px) {
