--- a/style.css
+++ b/style.css
@@ -52,9 +52,7 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-right: 30px;
-
-    
+    margin-right: 30px;    
 }
 
 .input-group {
@@ -67,18 +65,6 @@ form {
     margin-bottom: 20px;
 }
 
-/* Eliminate arrows on numeric inputs */
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
-}
 
 .input-group>input {
     font-size: x-large;
@@ -88,6 +74,7 @@ input[type=number] {
     border-radius: var(--border-radius-small);
     border: solid 1px var(--input-background-color) ;
     padding: 6px;
+    text-align: right;
 }
 
 .input-group>input:focus {
